# rules_c_proto

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  base.bzl
.github/workflows/: ci.yml  release.yml  update.yml
src/: BUILD
src/protobuf-c/: protobuf-c.c
test/: BUILD  test.cc  test.proto  test2.cc  test2.proto
tools/: bin.BUILD  extensions.bzl  tools_reg.bzl  update_tools_reg.py
